# nonrigid_icp_ed

./: README.md  demo.py  demo_face.py  demo_terrain.py  demo_watertight.py  main.py  pyproject.toml
config/: demo_face.yaml  demo_terrain.yaml  demo_watertight.yaml
demo/: demo_face.py  demo_terrain.py  demo_watertight.py
nonrigid_icp_ed/: config.py  graph.py  io.py  knn.py  loss.py  obj_io.py  registration.py  util.py  warp.py
