[project]
name = "nonrigid-icp-ed"
version = "0.1.0"
description = "Non-rigid ICP with Embedded Deformation"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "open3d>=0.19.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = " https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
